@@ -1,26 +1,17 @@
 package org.datacrow.core.security;
 
-import java.util.Calendar;
-import java.util.Date;
-
 import org.datacrow.core.utilities.CoreUtilities;
 
 public class SecurityToken {
 
 	private final String token;
-	private final Date createdOn;
 	
 	public SecurityToken() {
 		this.token = CoreUtilities.getUniqueID();
-		this.createdOn = Calendar.getInstance().getTime();
 	}
 	
 	public String getToken() {
 		return token;
-	}
-	
-	public Date getCreationDate() {
-		return createdOn;
 	}
 	
 	public boolean isValid() {
